MDEV-15208: server crashed, when using ORDER BY with window function and UNION

SELECTs inside a UNION can have window function but not the global ORDER BY clause of the UNION.